# cuda

./: .gitignore
p1/: .gitignore  CMakeLists.txt
p1/src/: main.cu  utils.cpp
